# microinsight

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  batch_buffer.py  build.rs  dumper.py  microinsight.py  release-please-config.json  remote_pb2.py  requirements.txt  types_pb2.py  writer.py
.github/workflows/: chart-bump.yml  chart-publish.yml  clean-packages.yml  docker-publish-amd.yml  docker-publish-arm.yml  docker-publish.yml  release-please.yml
charts/: CHANGELOG.md  Chart.yaml  values.yaml
charts/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
gogoproto/: gogo_pb2.py
src/: buffer.rs  buffer_manager.rs  database.rs  labels.rs  lib.rs  main.rs  metrics_buffer.rs  owner_buffer.rs
tests/: e2e.rs  test_batch_buffer.py  test_writer.py
