[package]
name = "microinsight"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.1.0", default-features = false, features = ["macros"] }
actix-web-prometheus = "0.1.2"
chrono = "0.4.40"
dashmap = "6.1.0"
env_logger = "0.11"
log = "0.4"
mysql = "26.0"
once_cell = "1.21.3"
prost = "0.13.5"
snap = "1.1.1"
sysinfo = "0.34.2"
reqwest = { version = "0.12", features = ["json"], optional = true }
testcontainers-modules = { version = "0.11.6", features = ["mariadb"], optional = true }

[build-dependencies]
prost-build = "0.13.5"

[features]
default = []
e2e-tests = ["testcontainers-modules", "reqwest"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["e2e-tests"]
