[package]
name = "microinsight"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal", "macros"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "server-graceful", "http1"] }
chrono = "0.4.40"
dashmap = "6.1.0"
log = "0.4"
mysql = { version = "26.0", features = ["default-rust" ] }
once_cell = "1.21.3"
prost = "0.13.5"
snap = "1.1.1"
sysinfo = "0.34.2"
simple_logger = "5.0.0"

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["mariadb"] }
testcontainers = { version = "0.23"}
hyper = { version = "1", features = ["http1", "client" ] }

[build-dependencies]
prost-build = "0.13.5"
