[package]
name = "microinsight"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
actix-web-prometheus = "0.1.2"
chrono = "0.4.40"
dashmap = "6.1.0"
simple_logger = "5.0.0"
log = "0.4"
mysql = { version = "26.0", features = ["default-rust" ] }
once_cell = "1.21.3"
prost = "0.13.5"
snap = "1.1.1"
sysinfo = "0.34.2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
testcontainers-modules = { version = "0.11", features = ["mariadb"] }
testcontainers = { version = "0.23"}

[build-dependencies]
prost-build = "0.13.5"
